update oauth v2 docs and route path
